# Harman-FOSS

./: Disclosure T66.2.lnk  Free and Open Source Software Disclosure for MMT2020 R7.3.txt  Free and Open Source Software Disclosure for MMT2020 X10.3.txt  Free and Open Source Software Disclosure for MMT2020 X11.4.txt
Diclosure Y14.1.1/: Readme.txt
Disclosure C8-9/base-passwd-3.5.29/: passwd.master
Disclosure C8-9/base-passwd-3.5.29/debian/: rules
Disclosure C8-9/base-passwd-3.5.29/patches/: series
Disclosure C8-9/dbus-1.8.4/bus/: Makefile.in
Disclosure C8-9/dbus-1.8.4/doc/: Makefile.in
Disclosure C8-9/elfutils-0.163/libcpu/: Makefile.in
Disclosure C8-9/gawk-3.1.5/pc/: dlfcn.c
Disclosure C8-9/gst-plugins-bad-1.6.3/docs/: Makefile.in
Disclosure C8-9/gst-plugins-bad-1.6.3/gst-libs/: Makefile.in
Disclosure C8-9/gst-plugins-bad-1.6.3/po/: af.gmo  fr.gmo  hu.gmo  tr.gmo
Disclosure C8-9/gst-plugins-base-1.6.3/po/: az.gmo  cs.gmo  eu.gmo  hu.gmo  sr.gmo  sv.gmo
Disclosure C8-9/gst-plugins-good-1.6.3/po/: ja.gmo  ro.gmo
Disclosure C8-9/gst-plugins-ugly-1.6.3/po/: af.gmo  hu.gmo  pl.gmo  vi.gmo
Disclosure C8-9/gstreamer-1.6.3/po/: it.gmo  uk.gmo
Disclosure C8-9/libnetfilter_log-1.0.1/PaxHeaders.26520/: Makefile.in  depcomp
Disclosure C8-9/paho.mqtt.c-1.2.0/src/: MQTTPersistenceDefault.c
Disclosure C8-9/simple-mtpfs-0.3.0/src/: simple-mtpfs-db.cpp  simple-mtpfs.h
Disclosure C8-9/usbutils-008/: lsusb-t.c
Disclosure C8/base-files-3.0.14/temp/: run.base_do_unpack.203465
Disclosure C8/base-passwd-3.5.29/: config.h.in  configure
Disclosure C8/dbus-1.8.20/dbus/: dbus-connection.c
Disclosure C8/elfutils-0.163/: configure
Disclosure C8/elfutils-0.163/config/: elfutils.spec.in
Disclosure C8/gst-plugins-bad-1.6.3/po/: bg.gmo  (+4 more)
Disclosure C8/gst-plugins-base-1.6.3/: gst-plugins-base.spec
Disclosure C8/vsftpd-3.0.3/: INSTALL
Disclosure S18.0/dbus-1.8.4/: Makefile.in
Disclosure SRP2.0/dbus-1.8.4/: config.h.in  configure
Disclosure SRP2.0/gst-plugins-bad-1.6.3/: Makefile.in
Disclosure SRP2.0/gstreamer-1.6.3/: gstreamer.spec
Disclosure T66.0/base-passwd-3.5.29/: configure.ac  group.master
Disclosure T66.1/: Readme.txt
Disclosure T66.1/gst-plugins-ugly-1.6.3/: configure
Disclosure T66.1/gstreamer-1.6.3/: configure
Disclosure T66.1/vsftpd-3.0.3/: seccompsandbox.c
Disclosure T66.2/gst-plugins-good-1.6.3/: configure
Disclosure T66.2/libsoup-2.50.0/: aclocal.m4  configure
Disclosure T68.1/Linux-Kernel- task mmu.c/: task_mmu.c
Disclosure T68.1/connman-1.0/: Makefile.in
Disclosure T68.1/dbus-1.8.14/: configure
Disclosure T68.1/elfutils-0.163/: elfutils.spec
Disclosure T68.1/gst-plugins-bad-1.6.3/: gst-plugins-bad.spec
Disclosure T68.1/gst-plugins-base-1.6.3/: configure
Disclosure T68.1/gst-plugins-ugly-1.6.3/: gst-plugins-ugly.spec
Disclosure T68.1/htop-1.0.3/: config.h
Disclosure T68.1/trace-cmd-2.3.0/: Makefile
Disclosure T68.1/vsftpd-3.0.3/: builddefs.h  tunables.c
Disclosure X11.4/: Readme.txt
Disclosure X11.4/chrpath-RELEASE_0_16/: HACKING
Disclosure X11.4/dbus-1.8.20/: configure.ac
Disclosure X11.4/freepv-master/: AUTHORS  CMakeLists.txt  Doxyfile  README.md  TODO
Disclosure X11.4/freepv-master/CMakeScripts/: FindJPEG.cmake  FindZLIB.cmake
Disclosure X11.4/freepv-master/m4/: ax_opengl.m4  zlib.m4
Disclosure X11.4/freepv-master/src/: CMakeLists.txt  config.h.in.cmake
Disclosure X11.4/freepv-master/src/freepv-glut/: CMakeLists.txt  freepv-glut.cpp  freepv-glut.vcproj  glut_platform.cpp
Disclosure X11.4/freepv-master/src/freepv-glx/: glx_platform.cpp  glx_platform.h
Disclosure X11.4/freepv-master/src/freepv-mozilla/: FreePV.vcproj  plugin.cpp  plugin_unix.cpp  resource.h
Disclosure X11.4/freepv-master/src/libfreepv/: Action.h  Camera.cpp  Controller.h  EventProcessor.cpp  Events.h  FPV_keysyms.h  OpenGLRenderer.cpp  PanoViewer.h  Platform.cpp  QTVRDecoder.cpp  Scene.cpp  Scene.h  SceneElement.cpp  SceneElement.h  Subject.cpp  XMLparser.h  imageReader.h  libfreepv.vcproj  pngReader.cpp  pngReader.h  utils.cpp  utils.h
Disclosure X11.4/freepv-master/src/libfreepv/Math/: Matrix4.cpp  Matrix4.h  quaternion.h
Disclosure X11.4/freepv-master/src/libfreepv/Utils/: getPath.h
Disclosure X11.4/freepv-master/src/libfreepv/glutfont/: Makefile.am  freeglut_font_copy.h  freeglut_glutfont_definitions.c
Disclosure X11.4/freepv-master/src/msvc/: config.h
Disclosure X11.4/freepv-master/src/utils/: CMakeLists.txt  qtvr2img.cpp
Disclosure X11.4/freepv-master/templates/: cpp
Disclosure X11.4/gst-plugins-good-1.6.3/: gst-plugins-good.spec
Disclosure X11.4/usbutils-008/: configure.ac
Disclosure X11.4/vsftpd-3.0.3/: sysdeputil.c
Disclosure X11.5/connman-1.0/: config.h.in
Disclosure X11.5/freepv-master/: ChangeLog  INSTALL  PKGBUILD  README
Disclosure X11.5/freepv-master/src/freepv-glx/: CMakeLists.txt  main.cpp
Disclosure X11.5/freepv-master/src/freepv-mozilla/: CMakeLists.txt  freepv.def  freepv.rc  npplat.h  plugin.h  plugin_unix.h  plugin_windows.cpp  plugin_windows.h
Disclosure X11.5/freepv-master/src/libfreepv/: Action.cpp  Behavior.cpp  Behavior.h  CMakeLists.txt  Camera.h  Error.cpp  Error.h  EventProcessor.h  Image.cpp  Image.h  JpegReader.cpp  NodeElement.cpp  NodeElement.h  OpenGLRenderer.h  PanoViewer.cpp  Parameters.cpp  Parameters.h  Platform.h  Renderer.h  SPiVparser.cpp  SPiVparser.h  Subject.h  XMLparser.cpp  imageReader.cpp
Disclosure X11.5/freepv-master/src/libfreepv/Math/: quaternion.cpp
Disclosure X11.5/freepv-master/src/libfreepv/Utils/: signatures.cpp  signatures.h  stringID.cpp  stringID.h
Disclosure X11.5/freepv-master/src/libfreepv/glutfont/: freeglut_font.c  freeglut_font_data.c
Disclosure X11.5/gst-plugins-bad-1.6.3/: configure
Disclosure X11.5/libsoup-2.50.0/: Makefile.in
Disclosure Y14.1.1/: Readme.txt
Disclosure Y14.3.1/: Readme.txt
Disclosure Y14.3.1/connman-1.0/: configure
Disclosure Y14.3.1/dbus-1.8.20/: configure
Disclosure Y14.3.1/vsftpd-3.0.3/: ls.c
Disclosure Y16.3/elfutils-0.163/: Makefile.in
Disclosure Y16.3/vsftpd-3.0.3/: vsftpd.conf.5
(+1069 files in other folders)
